test/libsolidity/syntaxTests/constants/mapping_constant.sol
mapping(uint => uint) constant b = b;
// ----
// DeclarationError 3530: (0-36): The type contains a (nested) mapping and therefore cannot be a constant.
